--- a/.github/workflows/rpcs3.yml
+++ b/.github/workflows/rpcs3.yml
@@ -91,7 +91,7 @@ jobs:
           name: RPCS3 for Linux (${{ runner.arch }}, ${{ matrix.compiler }})
           path: ${{ env.BUILD_ARTIFACTSTAGINGDIRECTORY }}/*.AppImage
           compression-level: 0
-      
+
       - name: Deploy master build to GitHub Releases
         if: |
           github.event_name != 'pull_request' &&
@@ -116,6 +116,7 @@ jobs:
       QT_VER: '6.8.2'
       QT_VER_MSVC: 'msvc2022'
       QT_DATE: '202501260838'
+      LLVM_VER: '19.1.7'
       VULKAN_VER: '1.3.268.0'
       VULKAN_SDK_SHA: '8459ef49bd06b697115ddd3d97c9aec729e849cd775f5be70897718a9b3b9db5'
       CCACHE_SHA: '6252f081876a9a9f700fae13a5aec5d0d486b28261d7f1f72ac11c7ad9df4da9'
@@ -148,7 +149,7 @@ jobs:
           path: ${{ env.CCACHE_DIR }}
           key: "${{ runner.os }}-ccache-${{ env.COMPILER }}-${{github.run_id}}"
           restore-keys: ${{ runner.os }}-ccache-${{ env.COMPILER }}-
-      
+
       - name: Setup Dependencies Cache
         uses: actions/cache@main
         with:
@@ -186,7 +187,7 @@ jobs:
           path: ${{ env.BUILD_ARTIFACTSTAGINGDIRECTORY }}
           compression-level: 0
           if-no-files-found: error
-      
+
       - name: Deploy master build to GitHub Releases
         if: |
           github.event_name != 'pull_request' &&
