--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,6 +75,7 @@ jobs:
 #     QT_VER_MSVC: 'msvc2022'
 #     QT_DATE: '202501260838'
 #     QTDIR: C:\Qt\$(QT_VER)\$(QT_VER_MSVC)_64
+#     LLVM_VER: '19.1.7'
 #     VULKAN_VER: '1.3.268.0'
 #     VULKAN_SDK_SHA: '8459ef49bd06b697115ddd3d97c9aec729e849cd775f5be70897718a9b3b9db5'
 #     VULKAN_SDK: C:\VulkanSDK\$(VULKAN_VER)
@@ -101,7 +102,7 @@ jobs:
 #         restoreKeys: 
 #           ccache | $(Agent.OS) | $(COMPILER)
 #       displayName: Build Ccache
-    
+
 #     - task: Cache@2
 #       inputs:
 #         key: $(Agent.OS) | $(COMPILER) | "$(QT_VER)" | $(VULKAN_SDK_SHA) | $(CCACHE_SHA) | llvm.lock | glslang.lock
@@ -161,7 +162,7 @@ jobs:
         restoreKeys: |
           ccache | "$(Agent.OS)" | "$(Agent.OSArchitecture)"
       displayName: Ccache cache
-    
+
     - task: Cache@2
       inputs:
         key: qt | "$(Agent.OS)" | "$(Agent.OSArchitecture)" | "$(QT_VER)" 
@@ -169,7 +170,7 @@ jobs:
         restoreKeys: |
           qt | "$(Agent.OS)" | "$(Agent.OSArchitecture)" | "$(QT_VER)" 
       displayName: Qt cache
-    
+
     # - task: Cache@2
     #   inputs:
     #     key: brew | "$(Agent.OS)"
@@ -196,7 +197,7 @@ jobs:
       displayName: Push build to GitHub
       env:
         RPCS3_TOKEN: $(RPCS3-Token)
-        
+
 - job: Mac_Build_arm64
   timeoutInMinutes: 180
   variables:
@@ -222,7 +223,7 @@ jobs:
         restoreKeys: |
           ccache | "$(Agent.OS)" | "$(Agent.OSArchitecture)"
       displayName: Ccache cache
-    
+
     - task: Cache@2
       inputs:
         key: qt | "$(Agent.OS)" | "$(Agent.OSArchitecture)" | "$(QT_VER)"
@@ -230,7 +231,7 @@ jobs:
         restoreKeys: |
           qt | "$(Agent.OS)" | "$(Agent.OSArchitecture)" | "$(QT_VER)"
       displayName: Qt cache
-    
+
     # - task: Cache@2
     #   inputs:
     #     key: brew | "$(Agent.OS)"
