--- a/rpcs3/rpcs3.vcxproj.filters
+++ b/rpcs3/rpcs3.vcxproj.filters
@@ -196,6 +196,9 @@
     <Filter Include="Gui\savestates">
       <UniqueIdentifier>{9b51636c-b371-425b-86d3-be003774a1b7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Io\video">
+      <UniqueIdentifier>{2bb5cec5-5acb-40c0-a388-68db05dff305}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -1176,6 +1179,9 @@
     <ClCompile Include="rpcs3qt\gui_game_info.cpp">
       <Filter>Gui\game list</Filter>
     </ClCompile>
+    <ClCompile Include="rpcs3qt\qt_video_source.cpp">
+      <Filter>Io\video</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Input\ds4_pad_handler.h">
@@ -1384,6 +1390,9 @@
     </ClInclude>
     <ClInclude Include="rpcs3qt\gui_game_info.h">
       <Filter>Gui\game list</Filter>
+    </ClInclude>
+    <ClInclude Include="rpcs3qt\qt_video_source.h">
+      <Filter>Io\video</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
