--- a/.github/ISSUE_TEMPLATE/1-regression-report.yml
+++ b/.github/ISSUE_TEMPLATE/1-regression-report.yml
@@ -50,7 +50,7 @@ body:
         * Completely close RPCS3 and locate the log file.
 
         RPCS3's Log file will be ```RPCS3.log.gz``` (sometimes shows as RPCS3.log with zip icon) or ```RPCS3.log``` (sometimes shows as RPCS3 wtih notepad icon).
-        * On Windows it will be in the RPCS3 directory near the executable
+        * On Windows it will be in the ```log``` folder inside your RPCS3 folder.
         * On Linux it will be in ```~/.cache/rpcs3/```
         * On MacOS it will be in ```~/Library/Caches/rpcs3```. If you're unable to locate it copy paste the path in Spotlight and hit enter.
   - type: textarea
